# C_language_university

./: .gitignore  CMakeLists.txt  break.c  continue.c  dice_counter.c  dice_generator.c  do_while.c  factorial.c  factorize_numbers.c  fibonacci_iter.c  fibonacci_recursive.c  hello.c  if.c  if_else.c  if_else_nested.c  increment_decrement.c  maximum_function.c  square_function.c  square_value.c  srand.c  sum.c  sum_even_for.c  switch.c  task1.c  task2.c  task3.c  test_if_else.c  test_increment_decrement.c  visibility.c  while.c
12-arrays/: answers_array.c  first_array.c  name_array.c  pass_array.c  pass_element.c  second_array.c  sum_array.c  third_array.c
13-array-sorting/: array_operations.c  binary_search_array.c  search_element_array.c  sort_array_ascending.c
14-multidem-arrays/: 3d_array.c  init_multi_arrays.c  operation_multi_arrays.c  square_matrix.c
18-pointer-arithmetic/: sort_array_ascending_pointers.c
