cmake_minimum_required(VERSION 3.9)
project(C_univer C)

set(CMAKE_C_STANDARD 99)

add_executable(hello hello.c)
add_executable(sum sum.c)
add_executable(if if.c)
add_executable(if_else if_else.c)
add_executable(if_else_nested if_else_nested.c)
add_executable(while while.c)
add_executable(increment_decrement increment_decrement.c)
add_executable(sum_even_for sum_even_for.c)
add_executable(switch switch.c)
add_executable(do_while do_while.c)
add_executable(break break.c)
add_executable(continue continue.c)