cmake_minimum_required(VERSION 3.9)
project(C_univer C)

set(CMAKE_C_STANDARD 99)

add_executable(hello hello.c)
add_executable(sum sum.c)
add_executable(if if.c)
add_executable(if_else if_else.c)
add_executable(if_else_nested if_else_nested.c)
add_executable(while while.c)
add_executable(increment_decrement increment_decrement.c)
add_executable(sum_even_for sum_even_for.c)
add_executable(switch switch.c)
add_executable(do_while do_while.c)
add_executable(break break.c)
add_executable(continue continue.c)
add_executable(square_function square_function.c)
add_executable(maximum_function maximum_function.c maximum_function.c)
add_executable(square_value square_value.c)
add_executable(dice_generator dice_generator.c)
add_executable(dice_counter dice_counter.c)
add_executable(srand srand.c)
add_executable(visibility visibility.c)
add_executable(factorial factorial.c)
add_executable(factorize_numbers factorize_numbers.c)
add_executable(fibonacci_iter fibonacci_iter.c)
add_executable(fibonacci_recursive fibonacci_recursive.c)